[package]
name = "appdater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.23", features = ["json", "stream"] }
tokio = { version = "1.35.1", features = ["full"] }
futures-util = "0.3.29"
clap = { version = "4.4.14", features = ["derive"] }
serde_json = "1.0.115"
serde = { version = "*", features = ["derive"]}
url = "2.5.0"